k8s/gke/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
        - path: /*
          backend:
            serviceName: hello-world
            servicePort: 5000
